fixed spacing

--- a/app/assets/stylesheets/show_results.css
+++ b/app/assets/stylesheets/show_results.css
@@ -32,7 +32,7 @@
   clear: left;
   border-bottom: 2px dashed #DB7093;
   width: auto;
-  padding-bottom: 20px;
+  padding-bottom: 100px;
   margin-left: 100px;
   margin-right: 100px;
 }
